SERVER-76056 Rename range deleter's docs deleted statistic from countDocsDeletedOnDonor to countDocsDeletedByRangeDeleter